# rules_itest

./: BUILD.bazel  socket.c
cmd/svcinit/: BUILD.bazel  main.go
runner/: runner.go
