load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

cc_binary(
    name = "exit0",
    srcs = ["exit0.c"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "libsocket.so",
    srcs = ["socket.c"],
    linkshared = 1,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "enable_per_service_reload",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)
